3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

server/skills.c: Fix crash - using incorrect map pointer in call
  to get_map_ob
MSW 2007-07-11

Tentative fix for bug #1746208: Critical crash with 'printlos'.
 common/los.c: use safe string functions. Use 0/100 for view instead of 0-100.
Nicolas Weeger 2007-07-11

socket/request.c: In map sending routine, use object anim_speed if so for
  animation speed instead of object speed.  Allows for zero speed objects
  to be animated, also matches behavior for inventory items.
MSW 2007-07-09

Documentation, no functional change.
 common/object.c
 server/rune.c
Nicolas Weeger 2007-07-09

Remove superfluous calls to esrv_del_item (since remove_ob calls it if needed).
Remove now unused send_removed_object function. Change esrv_send_item to esrv_update_item.
 common/item.c
 server/c_object.c c_wiz.c gods.c player.c plugins.c shop.c skills.c spell_effect.c time.c
 types/spell_effect/spell_effect.c
Nicolas Weeger 2007-07-09

Update face information below player if it changes.  Add P_PLAYER mapflag
field, as well as pointer to player on space making it easy to find
players on a space.  Fix for bug 1735459
---
common/map.c: Modify update_position() to look for player and
  update MapSpace accordingly.
common/object.c: update_object():  If player is object, update map
   attributes immediately.  Add handling for face or object changes.
include/map.h: Add SET/GET_MAP_PLAYER, player * to MapSpace, P_PLAYER
  flag
---
MSW 2007-07-08

Documentation, no functional change. Change some #define to enum for grouping purposes.
 include/map.h
Nicolas Weeger 2007-07-08

Try to factor esrv_del_item and esrv_send_item into remove_ob() and